# tjll

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  justfile  pyproject.toml  sync_test.py
.github/workflows/: ci.yml
backend/: .env.example  config.py  database.py  logging_setup.py  main.py
backend/LLM/: __init__.py
backend/LLM/client/: __init__.py
backend/LLM/pipeline/: __init__.py  chains.py  context.py  rag_pipeline.py
backend/LLM/prompts/: __init__.py  rephrase.py
backend/LLM/rephrase/: __init__.py  rewrite.py
backend/LLM/session/: __init__.py
backend/RAG/: __init__.py
backend/RAG/document/: __init__.py  chunking.py  embed.py  indexing.py  loaders.py  pdf.py
backend/RAG/infra/: docker-compose.yml.example
backend/RAG/models/: README.md
backend/RAG/opensearch/: __init__.py  schema.py
backend/RAG/retrieve/: __init__.py  rerank.py  search.py
backend/RAG/review_clean/: __init__.py  config.py  llama_client.py  pipeline.py
backend/RAG/scripts/: clean_yelp_reviews.py
backend/config/: __init__.py  auth.py  database.py  llm.py  mineru.py  paths.py  rag.py  yelp.py
backend/core/: __init__.py  crud.py  dependencies.py  email.py  exceptions.py  logger.py  online_tracker.py  schema.py  security.py
backend/data/: __init__.py  loader.py  schemas.py  service.py
backend/docs/: backend-guide.md  data-guide.md  rag-llm-backend-guide.md  yelp-data-guide.md
backend/llm/: __init__.py  schemas.py
backend/llm/api/: __init__.py  handler.py  schemas.py
backend/llm/client/: __init__.py  llm.py  tool_loop.py
backend/llm/graph/: __init__.py  builder.py  history_window.py  interrupt.py  nodes.py  router.py  service.py  session_pool.py  state.py  tools.py
backend/llm/insight/: __init__.py  model.py  registry.py  section.py  store.py
backend/llm/pipeline/: __init__.py  chains.py  context.py  rag_pipeline.py
backend/llm/prompts/: __init__.py  maintain.py  rag.py  rephrase.py  review_clean.py
backend/llm/rephrase/: __init__.py  rewrite.py
backend/llm/session/: __init__.py  history.py
backend/models/: __init__.py  app_user.py  base.py  business.py  favorite.py  review.py  user.py  user_setting.py
backend/rag/document/: __init__.py  chunking.py  clean.py  embed.py  image.py  index_progress.py  indexing.py  loaders.py  paths.py
backend/rag/models/: README.md
backend/rag/opensearch/: __init__.py  client.py  schema.py
backend/rag/retrieve/: __init__.py  rerank.py  search.py
backend/rag/review_clean/: __init__.py  batching.py  config.py  llama_client.py  pipeline.py  shard.py
backend/rag/scripts/: __init__.py  clean_yelp_reviews.py  index_cleaned_yelp.py
backend/routers/: __init__.py  admin.py  ai.py  auth.py  business.py  favorite.py  file.py  health.py  review.py  user.py
backend/schemas/: __init__.py  admin.py  ai.py  auth.py  business.py  common.py  favorite.py  llm.py  review.py  user.py  user_setting.py  yelp.py
backend/scripts/: extract_yelp_data.py
backend/services/: __init__.py  admin.py  ai.py  auth.py  avatar.py  business.py  favorite.py  file.py  llm.py  review.py  user.py  yelp.py  yelp_search.py
backend/tests/: __init__.py  conftest.py  test_config.py  test_crud_factory.py  test_models.py
backend/tests/api/: test_ai.py  test_business.py  test_common.py  test_health.py  test_review.py  test_yelp_search.py
backend/tests/data/: __init__.py  test_loader.py  test_schemas.py  test_user.py
backend/tests/data_get/: __init__.py  test_schemas.py  test_yelp_integration.py  test_yelp_service.py
backend/tests/llm/: test_api_ask.py  test_chains.py  test_client.py  test_context.py  test_history.py  test_prompts.py  test_rag_pipeline.py  test_review_clean_prompts.py  test_rewrite.py
backend/tests/rag/: __init__.py  test_document_chunking.py  test_document_clean.py  test_document_embed_pdf.py  test_document_indexing.py  test_document_loaders.py  test_index_cleaned_yelp.py  test_opensearch_client.py  test_opensearch_schema.py  test_retrieve_rerank.py  test_retrieve_search.py  test_review_clean_batching.py  test_review_clean_llama_client.py  test_review_clean_shard.py
backend/tests/scripts/: check_db.py
backend/tests/test_core/: test_online_tracker.py
backend/tests/test_data/: test_schemas.py  test_service.py
backend/tests/test_llm/: __init__.py  test_api_ask.py  test_chains.py  test_client.py  test_context.py  test_graph_ask.py  test_history.py  test_insight_persist.py  test_interrupt.py  test_maintain.py  test_prompts.py  test_rag_pipeline.py  test_rewrite.py  test_section_insight.py
backend/tests/test_models/: __init__.py  test_app_user.py  test_favorite.py
backend/tests/test_rag/: test_document_chunking.py  test_document_clean.py  test_document_indexing.py  test_document_loaders.py  test_index_cleaned_yelp.py  test_index_progress.py  test_opensearch_client.py  test_opensearch_schema.py  test_retrieve_rerank.py  test_retrieve_search.py  test_review_clean_pipeline.py  test_section_indexing.py
backend/tests/test_routers/: __init__.py  conftest.py  test_admin.py  test_ai.py  test_ai_routes.py  test_auth.py  test_avatar.py  test_business.py  test_favorite.py  test_file_upload.py  test_health.py  test_review.py  test_user.py
backend/tests/test_schemas/: __init__.py  test_auth.py  test_common.py  test_favorite.py  test_user.py  test_user_setting.py
backend/tests/test_services/: __init__.py  test_admin.py  test_ai.py  test_auth.py  test_business.py  test_favorite.py  test_file.py  test_review.py  test_user.py  test_yelp_search.py
backend/tests/test_utils/: __init__.py  test_security.py
docs/: api-need.md  api.md  architecture.md  backend-guide.md  cli-reference.md  commands.md  decision-records.md  development-log.md  requirements.md  test-cases.md  todo.md
docs/guides/: development.md  rag-llm.md  需求llm.md
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  types.d.ts
frontend/src/components/: ToastNotification.vue
frontend/src/composables/: useToast.ts
frontend/src/router/: index.ts
(+20 files in other folders)
