[project]
name = "tjll"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
# 以本机 conda 环境 ai（Python 3.11.15）为准
requires-python = ">=3.11,<3.12"
# RAG 运行时依赖：版本锁定自 conda env `ai`（2026-07-14）。
# 跑代码用 conda ai；.venv 给 just/uv 工具与队友声明用。
# 新增库：conda 里先装 → 再 just add 同步本文件与 uv.lock。
#
# torch 系列：pyproject 钉「无 +cu 后缀」的版本号，uv 默认可解析为 CPU 轮，
# 组员无 GPU 也能装。本机 GPU 请在 conda ai 单独装 cu126 轮（指令见提交说明/README）。
dependencies = [
    # ---- PyTorch（版本对齐 conda；声明为通用轮，CPU/GPU 均可）----
    "torch==2.13.0",
    "torchvision==0.28.0",
    "torchaudio==2.11.0",
    # ---- API / Web ----
    "fastapi==0.139.0",
    "uvicorn==0.51.0",
    "httpx==0.28.1",
    "pydantic==2.13.4",
    # ---- LangChain / RAG ----
    "langchain==1.3.13",
    "langchain-core==1.4.9",
    "langchain-community==0.4.2",
    "langchain-openai==1.3.5",
    "langchain-huggingface==1.2.0",
    "langchain-text-splitters==1.1.2",
    "langchain-redis==0.2.5",
    "langchain-classic==1.0.8",
    # ---- Embedding / Rerank 相关 ----
    "transformers==4.57.6",
    "sentence-transformers==2.7.0",
    "FlagEmbedding==1.4.0",
    "accelerate==1.14.0",
    "peft==0.19.1",
    "safetensors==0.8.0",
    "tokenizers==0.22.2",
    "huggingface-hub==0.36.2",
    "openai==2.45.0",
    "tiktoken==0.13.0",
    "numpy==2.4.6",
    "redis==7.4.1",
    # ---- 配置 / 检索客户端 / 文档加载 ----
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "opensearch-py>=2.4.0",
    "openpyxl>=3.1.0",
]

[dependency-groups]
dev = [
    "commitizen>=4.16.4",
    "mypy>=2.3.0",
    "ruff>=0.15.21",
    "ty>=0.0.59",
    "pre-commit>=4.2.0",
]


# ============================================================
# Commitizen 配置：约定式提交 (Conventional Commits)
# 文档：https://commitizen-tools.github.io/commitizen/
# ============================================================
[tool.commitizen]
# 使用的提交规范模板：cz_conventional_commits 是标准约定式提交
name = "cz_conventional_commits"

# 当前项目版本号（应与 [project].version 保持一致）
version = "0.1.0"

# 版本号所在的文件列表（cz bump 会自动更新这些文件中的版本号）
# 格式：["文件路径:版本号模式"]
version_files = [
    "pyproject.toml:version",
]

# Git 标签格式（cz bump 创建 tag 时使用）
tag_format = "v$version"

# 版本号增长规则：
#   - major：主版本号（不兼容的 API 变更）
#   - minor：次版本号（向下兼容的功能性新增）
#   - patch：修订号（向下兼容的问题修正）
#   - bump：根据 commit 消息自动推断（推荐）
bump_message = "bump: version $current_version → $new_version"

# 更新 changelog 时的额外钩子
# changelog_merge_hook = "echo 'changelog updated'"

# 允许的提交类型（默认已包含 feat, fix 等标准类型）
# 这里列出全部可用的类型供参考


# ============================================================
# Mypy 配置：仅检查后端代码
# ============================================================
[tool.mypy]
# 只检查 backend/ 目录（前端代码不涉及 Python）
files = "backend"

# Python 版本（与 conda ai 一致）
python_version = "3.11"

# 严格模式开关（建议逐步开启）
strict = false

# 允许未类型化的函数调用（逐步迁移时有用）
# disallow_untyped_calls = true

# 检查未类型化的函数定义
# disallow_untyped_defs = true

# 忽略缺少 import 的错误（某些第三方库没有类型 stub）
ignore_missing_imports = true

# 允许 redef 覆盖变量（应对特定模式）
allow_redefinition = true
