[project]
name = "tjll"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
# 以本机 conda 环境 ai（Python 3.11.15）为准
requires-python = ">=3.11,<3.12"
# RAG + Yelp/DB 运行时依赖。跑代码用 conda ai；.venv 给 just/uv 工具。
# torch：pyproject 钉无 +cu 后缀版本；本机 GPU 在 conda ai 装 cu126。
dependencies = [
    # ---- PyTorch ----
    "torch==2.13.0",
    "torchvision==0.28.0",
    "torchaudio==2.11.0",
    # ---- API / Web / DB（含 develop Yelp 相关）----
    "fastapi==0.139.0",
    "uvicorn==0.51.0",
    "httpx==0.28.1",
    "pydantic==2.13.4",
    "asyncpg>=0.31.0",
    "sqlalchemy[asyncio]>=2.0.51",
    # ---- LangChain / RAG ----
    "langchain==1.3.13",
    "langchain-core==1.4.9",
    "langchain-community==0.4.2",
    "langchain-openai==1.3.5",
    "langchain-huggingface==1.2.0",
    "langchain-text-splitters==1.1.2",
    "langchain-redis==0.2.5",
    "langchain-classic==1.0.8",
    # ---- Embedding / Rerank ----
    "transformers==4.57.6",
    "sentence-transformers==2.7.0",
    "FlagEmbedding==1.4.0",
    "accelerate==1.14.0",
    "peft==0.19.1",
    "safetensors==0.8.0",
    "tokenizers==0.22.2",
    "huggingface-hub==0.36.2",
    "openai==2.45.0",
    "tiktoken==0.13.0",
    "numpy==2.4.6",
    "redis==7.4.1",
    # ---- 配置 / 检索 / 文档 ----
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "opensearch-py>=2.4.0",
    "openpyxl>=3.1.0",
]

[dependency-groups]
dev = [
    "commitizen>=4.16.4",
    "mypy>=2.3.0",
    "ruff>=0.15.21",
    "ty>=0.0.59",
    "pre-commit>=4.2.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=6.1.0",
    "pytest-httpx>=0.36.2",
]


# ============================================================
# Commitizen 配置：约定式提交 (Conventional Commits)
# 文档：https://commitizen-tools.github.io/commitizen/
# ============================================================
[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
    "pyproject.toml:version",
]
tag_format = "v$version"
bump_message = "bump: version $current_version → $new_version"


[tool.typos.default]
extend-ignore-re = [
    # Yelp API 示例响应中的商家/评论 ID（非拼写错误）
    "IYWnA",
    "PnDKg",
]


[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
testpaths = ["backend/tests"]
markers = [
    "integration: test that calls real Yelp API and database",
]

[tool.coverage.run]
source = ["backend"]
omit = [
    "backend/tests/*",
    "backend/scripts/*",
    "backend/data/loader.py",
    "backend/data/schemas.py",
    "backend/main.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 80


[tool.mypy]
files = "backend"
python_version = "3.11"
strict = false
ignore_missing_imports = true
allow_redefinition = true
